fix: removing gap property from ul

--- a/src/index.scss
+++ b/src/index.scss
@@ -34,7 +34,6 @@ ul {
     list-style: none;
     display: flex;
     flex-direction: column;
-    gap: 1rem;
     margin-top: 3rem;
 }
 
